2018-06-04  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Alternative to show all accounts separately in the same over time chart

2018-06-03  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Account filter in charts and reports
	* Assets & Liabilities in over time report

2018-05-17  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add flags to currency lists

2018-04-26  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow value field conversion using $, £, €, ¥, and local currency symbol, even if not default currency

2018-04-15  Fabian Wolff <fabi.wolff@arcor.de>

	* Remove deprecated Encoding key from the .desktop file
	* Bump DocBook version

2018-04-01  Fabian Wolff <fabi.wolff@arcor.de>

	* Fix spelling errors involving "recurrance" and "occurrance"

2018-02-03  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Case insensitive descriptions and payees in charts report

2018-02-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Cloud synchronization

2018-01-14  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Annual total for over time chart

2018-01-13  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Restore possibility to specify payee/payer for each separate transaction in a split transaction 

2018-01-09  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix debt payment value edits behavior

2018-01-06  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Include subcategories in over time report
	* Option to merge changes when saving a file that has been modified after saving/loading
	* Id, first revision and last revision transaction, account and security properties,
	  and revision and last id file properties

2017-12-30  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* "All payees/payers" in categories comparison report

2017-12-27  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Only assume negative income/expense if the category is defined in the QIF file

2017-12-18  Hanna Knutsson <hanna.knutsson@protonmail.com>
